--- a/StellaGlowESP/credits.html
+++ b/StellaGlowESP/credits.html
@@ -31,14 +31,14 @@
 					<div class="content-c">
 				  	<div class="c-avatar">Raugo<img class="avatar" src="http://i.imgur.com/JocwEqg.png" width="80" height="80" title="Raugo"/> </div>
 					</div>
-					<div class="title-c">TRADUCTORES</div>
+					<div class="title-c">TRADUCCIÓN</div>
 					<div class="content-c">
 						<div class="c-avatar">Darkmet98<br><img class="avatar" src="http://i.imgur.com/P40d1Ne.png" width="80" height="80" title="Darkmet98" /></div>
 				 		<div class="c-avatar">Raugo<br><img class="avatar" src="http://i.imgur.com/JocwEqg.png" width="80" height="80" title="Raugo" /></div>
 						<div class="c-avatar">Alexiiius<br><img class="avatar" src="http://i.imgur.com/nvHbjOS.jpg" width="80" height="80" title="Alexiiius" /></div>
 						<div class="c-avatar">xppancho<br><img class="avatar" src="http://i.imgur.com/FBzckWE.jpg" width="80" height="80" title="xppancho" /></div>
 				 </div>
-				 	<div class="title-c">DISEÑADORES GRAFICOS</div>
+				 	<div class="title-c">DISEÑO GRÁFICO</div>
 					<div class="content-c">
 						<div class="c-avatar">Raugo<br><img class="avatar" src="http://i.imgur.com/JocwEqg.png" width="80" height="80" title="Raugo" /></div>
 				 		<div class="c-avatar">Darkmet98<br><img class="avatar" src="http://i.imgur.com/P40d1Ne.png" width="80" height="80" title="Darkmet98"/></div>
@@ -52,20 +52,21 @@
 						<div class="c-avatar">Emberlith<br><img class="avatar" src="http://i.imgur.com/E4jekFh.jpg" width="80" height="80" title="Emberlith" /></div>
 						<div class="c-avatar">Darkmet98<br><img class="avatar" src="http://i.imgur.com/P40d1Ne.png" width="80" height="80" title="Darkmet98"/></div>
 					</div>
-				 	<div class="title-c">BETATESTERS</div>
+				 	<div class="title-c">TESTEO</div>
 					<div class="content-c">
 						<div class="c-avatar">Darkmet98<br><img class="avatar" src="http://i.imgur.com/P40d1Ne.png" width="80" height="80" title="Darkmet98"/></div>
 						<div class="c-avatar">xppancho<br><img class="avatar" src="http://i.imgur.com/FBzckWE.jpg" width="80" height="80" title="xppancho" /></div>
 						<div class="c-avatar">Raugo<br><img class="avatar" src="http://i.imgur.com/JocwEqg.png" width="80" height="80" title="Raugo" /></div>
 						<div class="c-avatar">Alexiiius<br><img class="avatar" src="http://i.imgur.com/nvHbjOS.jpg" width="80" height="80" title="Alexiiius" /></div>
 						<div class="c-avatar">Emberlith<br><img class="avatar" src="http://i.imgur.com/E4jekFh.jpg" width="80" height="80" title="Emberlith" /></div>
+						<div class="c-avatar">Sorium<br><img class="avatar" src="http://i.imgur.com/J1P66sz.jpg" width="80" height="80" title="Sorium" /></div>
 					</div>
 				<div class="title-c">WEBMASTERS</div>
 					<div class="content-c">
 				 		<div class="c-avatar">Darkmet98<br><img class="avatar" src="http://i.imgur.com/P40d1Ne.png" width="80" height="80" title="Darkmet98"/></div>
 				  	<div class="c-avatar">Crusard<img class="avatar" src="http://i.imgur.com/hohbkAe.jpg" width="80" height="80" title="Crusard"/></div>
 					</div>
-				<div class="title-c">HA PARTICIPADO</div>
+				<div class="title-c">TAMBIEN HA PARTICIPADO/AYUDADO</div>
 					<div class="content-c">
 					<div class="c-avatar">Keizel<img class="avatar" src="http://i.imgur.com/ijksrMH.png" width="80" height="80" title="Keizel (Como corrector inicial)"/></div>
 					<div class="c-avatar">DarRKKoNNaN<br><img class="avatar" src="http://i.imgur.com/aVWXkMb.png" width="80" height="80" title="DarRKKoNNaN (Como traductor inicial)" /></div>
@@ -73,6 +74,10 @@
 					<div class="c-avatar">Lina<br><img class="avatar" src="http://i.imgur.com/vtdKizZ.png" width="80" height="80" title="Lina (Como correctora y betatesteadora inicial)"/></div>
 					<div class="c-avatar">belikewhat<br><img class="avatar" src="http://i.imgur.com/v30boiV.png" width="80" height="80" title="belikewhat (Como traductora inicial)" /></div>
 				 	<div class="c-avatar">PkmM7<img class="avatar" src="http://i.imgur.com/EmFdTRQ.png" width="80" height="80" title="PkmM7 (Como corrector)"/></div>
+				 	<div class="c-avatar">Loud14<img class="avatar" src="http://i.imgur.com/U7Cr3kV.jpg" width="80" height="80" title="Loud14 (Apoyo para la traducción de textos japoneses)"/></div>
+				 	<div class="c-avatar">Omega Max<img class="avatar" src="http://i.imgur.com/kEu733m.jpg" width="80" height="80" title="Omega Max (Apoyo para la traducción de textos japoneses)"/></div>
+				 	<div class="c-avatar">Dark_Kudoh<img class="avatar" src="http://i.imgur.com/oWm0c0Z.jpg" width="80" height="80" title="Dark_Kudoh (Traducción de textos japoneses)"/></div>
+					<div class="c-avatar">Kiroii<img class="avatar" src="http://i.imgur.com/QQTtcVl.jpg" width="80" height="80" title="Kiroii (Dibujante para el contenido de la traducción)"/></div>
 					</div>
 				</div>
 			</div>
