--- a/StellaGlowESP/index.html
+++ b/StellaGlowESP/index.html
@@ -27,9 +27,9 @@
 				<div class="headerimg" ><p class="header">¡Bienvenido!</p></div>
 				<div class="text-content"><div class="text-left">Bienvenido a la página web dedicada a la traducción de Stella Glow al español. <br> <br> 
 					Esta página muestra toda la información sobre el estado de la traducción y todo tipo de información útil acerca de la transcripción al castellano de este título. <br> <br> 
-					Si tienes alguna duda, sugerencia o crítica constructiva te recomendamos que te pases por nuestro hilo oficial en ElOtroLado.net, pulsando <a href="http://www.elotrolado.net/hilo_hilo-oficial-traduccion-del-stella-glow-al-espanol_2150612">aquí</a>. <br> <br> 
-					Actualmente la traducción se encuentra en estado de corrección y testeo, podéis descargar un parche que traduce la demo, el parche se localiza en el apartado de <a href="downloads.html">descargas</a>. <br> <br>
-					Para revisar los avances de la traducción, puedes visitar el apartado <a href="progresos.html">"Progresos"</a> de nuestra WEB.
+					Si tienes alguna duda, sugerencia o crítica constructiva te recomendamos que te pases por nuestro apartado de feedback <a href="feedback.html">aquí</a>. <br> <br> 
+					Actualmente la traducción está finalizada, pronto podéis descargar un parche que traduce la demo o el videojuego al completo, el parche se localiza en el apartado de <a href="downloads.html">descargas</a>. <br> <br>
+					Para revisar los avances de la traducción, puedes visitar el apartado <a href="progresos.html">"Progresos"</a> de nuestra WEB.  <br> <br>
 					<br>Recuerda que este es un proyecto sin ánimo de lucro y que este parche se puede distribuir por cualquier medio posible, siempre y cuando se respeten los derechos de autor. <br> <br>
 					Esperamos que disfrutes tanto de la traducción al español como del juego.
 					</div>
