Trailer añadido en la galería

--- a/StellaGlowESP/images.html
+++ b/StellaGlowESP/images.html
@@ -85,6 +85,7 @@
 				</table>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/zRTX-QB8rUo" frameborder="0" allowfullscreen></iframe> 
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/d-f_DbcKOB4" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/dZ2CIaGsb8M" frameborder="0" allowfullscreen></iframe>
 				</center>
 			</div>
 			<div class="footer">
