--- a/runefactory4/informacion.html
+++ b/runefactory4/informacion.html
@@ -1,7 +1,7 @@
 ﻿<head>
 	<title>GlowTranslations - Rune Factory 4 - Información</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
-	<link rel="icon" href="favicon.ico" />
+	<link rel="icon" href="../favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="keywords" content="Stella Glow, Rune Factory, Traducciones, Scene, 3DS">
