--- a/stellaglow/galeria.html
+++ b/stellaglow/galeria.html
@@ -2,7 +2,7 @@
 	<title>GlowTranslations - Stella Glow - Galería</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="stylesheet" type="text/css" href="gallery.css">
-	<link rel="icon" href="favicon.ico" />
+	<link rel="icon" href="../favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="keywords" content="Stella Glow, Rune Factory, Traducciones, Scene, 3DS">
