Eliminados los traductores, solo necesitamos correctores por ahora

--- a/runefactory4/participa.html
+++ b/runefactory4/participa.html
@@ -18,7 +18,7 @@
 				<img onload="this.style.opacity='1';" src="../images/rune-participa.png" style="float: right;">
 				Si te interesa participar en el proyecto de traducción de Rune Factory 4 para 3DS, envíanos un correo para entrar en el grupo de traducción.<br><br>
 				<div class="title"><h1>¿Qué necesitamos?</h1></div>
-				Actualmente tenemos editores gráficos de sobra, así que solo buscamos traductores y correctores para acelerar las cosas y sacar una traducción de calidad.<br>
+				Actualmente tenemos editores gráficos de sobra, así que solo buscamos <s>traductores y</s> correctores para acelerar las cosas y sacar una traducción de calidad.<br>
 				<div class="title"><h2>Corrector</h2></div>
 				Como corrector, tu función principal será leer el texto en inglés, entender el contexto, revisar la frase y corregir las faltas de ortografía que encuentres a la vez de hacer que la frase suene natural sin perder el contexto original. <br><br> 
 				Si has decidido entrar como corrector, mira la conversación que hay a continuación, corrígela y haz que quede más natural, pero sin cambiar el contexto.<br>
@@ -36,12 +36,6 @@
 					Podemos hacer algo para reparar eso?<br>
 					No, solo podemos ir a trabajar y dejar de llorar sobre la leche derramada<br></span></li>
 				</ul><br>
-				<div class="title"><h2>Traductor</h2></div>
-				Si quieres entrar como traductor, mira las frases que hay a continuación, tradúcelas con buena ortografía, sin faltas y sin cambiar el contexto.<br>
-				<ul style="font-style: italic;">
-				<li>Quasars, pulsars... There's a whole lot of stuff beating away up there.</li>
-				<li>They looked like they were about to claw each other's eyes out.</li>
-				</ul>
   				<div class="title"><h1>Requisitos</h1></div>
   				Necesitamos gente que se envuelva con el proyecto, es decir, que le guste el juego, que sea un perfeccionista, es decir, que no deje algo sin hacer y se vaya a otra cosa y que, obviamente, sepa inglés.
 				<br><br>
