--- a/runefactory4/participa.html
+++ b/runefactory4/participa.html
@@ -37,7 +37,7 @@
 					No, solo podemos ir a trabajar y dejar de llorar sobre la leche derramada<br></span></li>
 				</ul><br>
   				<div class="title"><h1>Requisitos</h1></div>
-  				Necesitamos gente que se envuelva con el proyecto, es decir, que le guste el juego, que sea un perfeccionista, es decir, que no deje algo sin hacer y se vaya a otra cosa y que, obviamente, sepa inglés.
+  				Necesitamos gente que se involucre con el proyecto, es decir, que le guste el juego, que sea un perfeccionista, es decir, que no deje algo sin hacer y se vaya a otra cosa y que, obviamente, sepa inglés.
 				<br><br>
   				No hay tiempo mínimo ni cuotas tontas, solo queremos que nos ayudes a progresar, se valorara mucho el tiempo que le puedas dedicar a la traducción.<br><br>
   				En el correo indícanos si has jugado al juego en inglés, si has participado en algún otro proyecto y las horas que crees que le puedes dedicar a la semana.<br><br>
