Añadida la traducción de Lord of Magna: Maiden Heaven

--- a/lordofmagna/galeria.html
+++ b/lordofmagna/galeria.html
@@ -1,5 +1,5 @@
 ﻿<head>
-	<title>GlowTranslations - Rune Factory 4 - Galería</title>
+	<title>GlowTranslations - Lord of Magna: Maiden Heaven - Galería</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="stylesheet" type="text/css" href="gallery.css">
 	<link rel="icon" href="../favicon.ico" />
@@ -8,8 +8,8 @@
 	<meta name="keywords" content="Stella Glow, Rune Factory, Lord of Magna, Traducciones, Scene, 3DS">
 	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
 	<meta name="author" content="Glowtranslations">
-</head> 
-<body class="body-RF4 galeria traducciones">
+</head>
+<body class="body-LOM galeria traducciones">
 	<script>
 		function openModal() {
  		 document.getElementById('myModal').style.display = "block";
@@ -62,22 +62,10 @@
     <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Logo-Rune.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Menú-inferior.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Menú-superior.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Pantalla-inicial.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Selección.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Selección-de-género.jpg" onclick="openModal();currentSlide(8)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Nombres.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
   </div>
 </div>
 
@@ -86,42 +74,23 @@
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1 / 8</div>
+      <div class="numbertext">1 / 4</div>
         <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">2 / 8</div>
+      <div class="numbertext">2 / 4</div>
         <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">3 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Logo-Rune.jpg" style="margin: auto;">
+      <div class="numbertext">3 / 4</div>
+        <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">4 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Menú-inferior.jpg" style="margin: auto;">
-    </div>
-    <div class="mySlides">
-      <div class="numbertext">5 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Menú-superior.jpg" style="margin: auto;">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">6 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Pantalla-inicial.jpg" style="margin: auto;">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">7 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Selección.jpg" style="margin: auto;">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">8 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Selección-de-género.jpg" style="margin: auto;">
+      <div class="numbertext">4 / 4</div>
+        <img onload="this.style.opacity='1';" src="gallery/Nombres.jpg" style="margin: auto;">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -139,36 +108,20 @@
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Logo-Rune.jpg" onclick="currentSlide(3)" alt="Pantalla inicial">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-3.jpg" onclick="currentSlide(3)" alt="Conversaciones">
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Menú-inferior.jpg" onclick="currentSlide(4)" alt="Menú inferior">
-    </div>
-    
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Menú-superior.jpg" onclick="currentSlide(5)" alt="Menú superior">
-    </div>
-
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Pantalla-inicial.jpg" onclick="currentSlide(6)" alt="Pantalla inicial">
-    </div>
-
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Selección.jpg" onclick="currentSlide(7)" alt="Selecciones">
-    </div>
-
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Selección-de-género.jpg" onclick="currentSlide(8)" alt="Generos">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Nombres.jpg" onclick="currentSlide(4)" alt="Nombres iniciales">
     </div>
     </div>
   </div>
 </div>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/ITZgMBU986c" frameborder="0" allowfullscreen></iframe></center>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/FIDzjw0g5Ko?rel=0" frameborder="0" allowfullscreen></iframe></center>
 			</div>
 		</div>
 		<div style="height:100px;"></div>
 		<div class="footer" id="footer"></div>
-		<script src="../menus.js" onload="mainMenu(), runeFactorySubMenu(), footer()"></script>
+		<script src="../menus.js" onload="mainMenu(), lordofMagnaSubMenu(), footer()"></script>
 	</div>
 </body>
