--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="icon" href="favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
-	<meta name="keywords" content="Stella Glow, Rune Factory, Traducciones, Scene, 3DS">
+	<meta name="keywords" content="Stella Glow, Rune Factory, Lord of Magna, Traducciones, Scene, 3DS">
 	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
 	<meta name="author" content="Glowtranslations">
 </head>
@@ -56,6 +56,14 @@
 					</div>
 				<div style="clear: both;"></div>
 				<div class="progress-title">Rune Factory 4</div>
+					<div class="wrap">
+					<div class="progress-radial progress-5" style="background-color: #4f7cfe;">
+ 					 <div class="overlay"></div>
+ 					 <div class="text-overlay" style="font-size: 30px;">1%</div>
+					</div>
+					</div>
+				<div style="clear: both;"></div>
+				<div class="progress-title">Lord of Magna: Maiden Heaven</div>
 					<div class="wrap">
 					<div class="progress-radial progress-5" style="background-color: #4f7cfe;">
  					 <div class="overlay"></div>
