--- a/stellaglow/creditos.html
+++ b/stellaglow/creditos.html
@@ -4,7 +4,7 @@
 	<link rel="icon" href="../favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
-	<meta name="keywords" content="Stella Glow, Rune Factory, Traducciones, Scene, 3DS">
+	<meta name="keywords" content="Stella Glow, Rune Factory, Lord of Magna, Traducciones, Scene, 3DS">
 	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
 	<meta name="author" content="Glowtranslations">
 </head>
