--- a/lordofmagna/galeria.html
+++ b/lordofmagna/galeria.html
@@ -56,16 +56,16 @@
 			<div class="content">
 				<div class="row">
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.JPG" onclick="openModal();currentSlide(1)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.JPG" onclick="openModal();currentSlide(2)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.JPG" onclick="openModal();currentSlide(3)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Nombres.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Nombres.JPG" onclick="openModal();currentSlide(4)" class="hover-shadow">
   </div>
 </div>
 
@@ -75,22 +75,22 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-        <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.jpg" style="margin: auto;">
+        <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 4</div>
-        <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.jpg" style="margin: auto;">
+        <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 4</div>
-        <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.jpg" style="margin: auto;">
+        <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 4</div>
-        <img onload="this.style.opacity='1';" src="gallery/Nombres.jpg" style="margin: auto;">
+        <img onload="this.style.opacity='1';" src="gallery/Nombres.JPG" style="margin: auto;">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -100,19 +100,19 @@
     </div>
 		<div class="gallery-thumbs">
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-1.jpg" onclick="currentSlide(1)" alt="Conversaciones">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-1.JPG" onclick="currentSlide(1)" alt="Conversaciones">
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-2.jpg" onclick="currentSlide(2)" alt="Conversaciones">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-2.JPG" onclick="currentSlide(2)" alt="Conversaciones">
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-3.jpg" onclick="currentSlide(3)" alt="Conversaciones">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-3.JPG" onclick="currentSlide(3)" alt="Conversaciones">
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Nombres.jpg" onclick="currentSlide(4)" alt="Nombres iniciales">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Nombres.JPG" onclick="currentSlide(4)" alt="Nombres iniciales">
     </div>
     </div>
   </div>
