--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				Así que nos dedicamos a traducir esos juegos para que tú y todo el mundo puedan disfrutarlo.<br><br>
 				No somos una empresa, no somos una ONG, solo somos un grupo de fans, no queremos donaciones, no queremos fama, no queremos ninguna recompensa salvo unas gracias por traducir el juego que ahora puedes disfrutar. (Opcional, pero nos gustaría :P)
 				<div class="title"><h1>Nuestros proyectos</h1></div>
-				Ahora mismo estamos empezando un nuevo proyecto, traducir del inglés al español el juego "Rune Factory 4", un juego que salió en japonés y en inglés pero no en español. <br><br>
+				Ahora mismo estamos empezando unos nuevos proyectos, traducir del inglés al español los juegos <a href="runefactory4/informacion.html">"Rune Factory 4"</a> y <a href="lordofmagna/informacion.html">"Lord of Magna: Maiden Heaven</a>, unos juegos que salieron en japonés y en inglés pero no en español. <br><br>
 				Acabamos de terminar la traducción de <a href="stellaglow/informacion.html">Stella Glow</a>, prácticamente un año y poco hemos tardado en traducirlo, lo hemos probado y funciona bien, es fácil de aplicar, y te permitirá disfrutar el juego en español.<br><br>
 				Posiblemente tenga errores gramaticales, alguna que otra frase en un español que no sea neutro, o alguna palabra fuera de contexto, pero no somos profesionales, así que es normal.<br><br>
 				Si encuentras un error, mira en la seccion <a href="contactar.html">"contacto"</a> para contactar con nosotros y reportarlo, te responderemos lo antes posible.
