Añadido los nuevos miembros

--- a/miembros.html
+++ b/miembros.html
@@ -46,6 +46,31 @@
 					<div class="member-name" style="background-color: #4f7cfe;">Emberlith</div>
 					<div class="member-desc">Correctora<br>Betatester<br>Diseñadora Gráfica</div>
 				</div>
+				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
+					<div class="member-avatar" style="background-image: url('images/avatars/Lilia.~.jpg')"></div>
+					<div class="member-name" style="background-color: #4f7cfe;">Lilia.~</div>
+					<div class="member-desc">Traductora</div>
+				</div>
+				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
+					<div class="member-avatar" style="background-image: url('images/avatars/Natsu.jpg')"></div>
+					<div class="member-name" style="background-color: #4f7cfe;">Natsu Karyuu</div>
+					<div class="member-desc">Corrector</div>
+				</div>
+				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
+					<div class="member-avatar" style="background-image: url('images/avatars/Sany.jpg')"></div>
+					<div class="member-name" style="background-color: #4f7cfe;">Sany</div>
+					<div class="member-desc">Corrector</div>
+				</div>
+				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
+					<div class="member-avatar" style="background-image: url('images/avatars/Elaine.jpg')"></div>
+					<div class="member-name" style="background-color: #4f7cfe;">ElaineWeasley</div>
+					<div class="member-desc">Correctora</div>
+				</div>
+				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
+					<div class="member-avatar" style="background-image: url('images/avatars/Hec17.jpg')"></div>
+					<div class="member-name" style="background-color: #4f7cfe;">Hec17</div>
+					<div class="member-desc">Corrector</div>
+				</div>
 				<div style="clear: both;"></div>
 			</div>
 		</div>
