--- a/lordofmagna/informacion.html
+++ b/lordofmagna/informacion.html
@@ -21,7 +21,7 @@
     Lord of Magna: Maiden Heaven, otro titulazo de la mano de yoshifumi hashimoto (otros titulos suyos son Rune Factory 4 y Story of seasons)   <br><br>
     Aunque ya tenemos todo listo para empezar, le dedicaremos menos tiempo que al Rune Factory 4 ya que es un proyecto secundario.
     <div class="title"><h1>¿Habrá Demo como en el Stella Glow?</h1></div>
-    Al parecer, alguien del equipo de desarrollo de Lord of Magna decidió que no hace falta una demostración del juego, una pena la verdad, por desgracia no hacemos milagros, por lo que no podemos hacer un parche para una demo que no existe, pero bueno, cuanto más gente se anime, antes terminaremos la traducción.<br>
+    Al parecer, alguien del equipo de desarrollo de Lord of Magna decidió que no hace falta una demostración del juego, una pena la verdad, por desgracia no hacemos milagros, por lo que no podemos hacer un parche para una demo que no existe.<br>
     <div class="title"><h1>¿Cuánto durará la traducción?</h1></div>
     El otro día llamamos a el servicio técnico de nuestra bola de cristal, la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra, así que solo podemos decir que estará tan pronto como lo terminemos, tres meses, un año, una década, no lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude antes estará :P<br>
     <br>Aun así, si tanto te gusta el juego, puedes seguirnos en nuestra cuenta de <a href="https://www.twitter.com/glowtranslate">Twitter</a>.<br>
