Actualizado los post de EOL

--- a/contactar.html
+++ b/contactar.html
@@ -37,7 +37,7 @@
 				<div class="module-title-background" style="background-image: url('images/eol-banner.png');">
 				<div class="content-title">Foro</div>
 				</div>
-					<p style="font-size: 14px;">Visita el <a href="http://www.elotrolado.net/hilo_hilo-oficial-traduccion-del-stella-glow-al-espanol_2150612">hilo oficial</a> de la traducción de Stella<br /> Glow para saber más y/o comentar o preguntar cualquier cosa. <br /><a href="http://www.elotrolado.net/hilo_hilo-oficial-traduccion-del-stella-glow-al-espanol_2150612">¡Comenta en EOL!</a></p>
+					<p style="font-size: 14px;">Visita el <a href="http://www.elotrolado.net/hilo_hilo-oficial-traduccion-del-stella-glow-al-espanol_2150612">hilo oficial</a> de la traducción de Stella Glow, de <a href="https://www.elotrolado.net/hilo_hilo-oficial-traduccion-de-rune-factory-4-al-espanol_2226213">Rune Factory 4</a> o <a href="https://www.elotrolado.net/hilo_hilo-oficial-traduccion-de-lord-of-magna-maiden-heaven-al-espanol_2229462">Lord of Magna: Maiden Heaven</a> para saber más y/o comentar o preguntar cualquier cosa. <br />¡Comenta en EOL!</p>
 			</div>
 		</div>
 		<div class="module" style="width: 290px; margin-top: 20px;">
