Añadido el github de stella glow para aclarar sugerencias, reportar errores y más cosas en el futuro

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				Ahora mismo estamos empezando unos nuevos proyectos, traducir del inglés al español los juegos <a href="runefactory4/informacion.html">"Rune Factory 4"</a> y <a href="lordofmagna/informacion.html">"Lord of Magna: Maiden Heaven</a>, unos juegos que salieron en japonés y en inglés pero no en español. <br><br>
 				Acabamos de terminar la traducción de <a href="stellaglow/informacion.html">Stella Glow</a>, prácticamente un año y poco hemos tardado en traducirlo, lo hemos probado y funciona bien, es fácil de aplicar, y te permitirá disfrutar el juego en español.<br><br>
 				Posiblemente tenga errores gramaticales, alguna que otra frase en un español que no sea neutro, o alguna palabra fuera de contexto, pero no somos profesionales, así que es normal.<br><br>
-				Si encuentras un error, mira en la seccion <a href="contactar.html">"contacto"</a> para contactar con nosotros y reportarlo, te responderemos lo antes posible.
+				Si encuentras un error, revisa la sección de "información" del juego especifico para ayudarnos a arreglar errores y lo arreglaremos lo antes posible.
 				<div class="title"><h1>¡A disfrutar!</h1></div>
 				Si estás aquí es porque te interesa algún juego que hemos traducido o porque nos quieres hacer una reclamación de derechos de autor, en cualquier caso, en la sección de traducciones tienes todos nuestros proyectos con links de descarga de los parches para traducir el juego. <br>
 				<p style="text-align: center; font-size: 24px; font-weight: bold; text-decoration: underline;">¡Disfrutad de nuestras traducciones!</p>
