--- a/stellaglow/informacion.html
+++ b/stellaglow/informacion.html
@@ -24,6 +24,10 @@
 				Hay 4 métodos para parchear el juego, Hans, NTR, 3DS y CIA.<br>
 				Dependiendo de cuál elijas, tendrás que hacer un procedimiento u otro.<br>
 				Toda la información que necesitáis se encuentra en el PDF que contiene el parche.
+				<div class="title"><h1>He encontrado un error, ¿cómo puedo reportarlo?</h1></div>
+				Hemos creado un repositorio en nuestro github para este tipo de cosas y más.<br>
+				El repositorio de github se encuentra <a href="https://github.com/Glowtranslations/StellaGlowESP">aquí</a>.<br>
+				Sigue las instrucciones del readme que hay para poder reportar el error.
 				<div class="title"><h1>¡A disfrutar!</h1></div>
 				Como se ha mencionado antes, hemos tardado un año y medio en acabar la traducción, asi que no os vamos a entretener más.<br>
 				De parte de todo el equipo de GlowTranslations, deseamos que os lo paséis genial jugando este increíble juego, y daros las gracias por la increíble paciencia que habéis tenido y el apoyo que muchos de vosotros nos habéis brindado.<br>
