Arreglado unos errores ortográficos

--- a/miembros.html
+++ b/miembros.html
@@ -73,9 +73,9 @@
 				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Información adicional</h1></div>
-				Para más información adicional sobre nuestro equipo de traducciones, puedes visitar el <a href= "https://github.com/Glowtranslations/glowtranslations.github.io">readme</a> del source de la página web.<br>
-				Tambien si necesitas contactar con nosotros, puedes visitar el apartado de <a href="contactar.html"> contacto </a> de nuestra web.<br>
-				Recuerda, nuestros proyectos son sin animo de lucro por fans para fans. En este sitio no encontraras ningún enlace para descargar un juego o una demo, solo parches para traducir el videojuego al español. <br>
+				Para más información adicional sobre nuestro equipo de traducciones, puedes visitar el <a href= "https://github.com/Glowtranslations/glowtranslations.github.io">readme</a> del source de la página web.<br><br>
+				También si necesitas contactar con nosotros, puedes visitar el apartado de <a href="contactar.html"> contacto </a> de nuestra web.<br><br>
+				Recuerda, nuestros proyectos son sin animo de lucro por fans para fans. En este sitio no encontrarás ningún enlace para descargar un juego o una demo, sólo parches para traducir el videojuego al español. <br><br>
 				Glowtranslations 2016-2017
 			</div>
 		</div>
