--- a/stellaglow/descargas.html
+++ b/stellaglow/descargas.html
@@ -24,6 +24,7 @@
 						<a href="https://mega.nz/#!A6ATTIQb!V7Rpdl1RVDyyrfhG_Gbr99Tbn0rqiff-aacoH-09ego"><div class="mega">Mega</div></a>
 						<a href="http://www.mediafire.com/file/nissdvaa97955lt/Stella_Glow_Espa%C3%B1ol_V1.0_GlowTranslations.zip"><div class="mediafire">Mediafire</div></a>
 						<a href="https://drive.google.com/open?id=0BxU80RyKLHhkZEtkV3hBeFlkZWs"><div class="Drive">Drive</div></a>
+						<a href="https://github.com/Glowtranslations/StellaGlowESP/releases/download/1.0/Stella.Glow.Espanol.V1.0.GlowTranslations.zip"><div class="github">Github</div></a>
 					</div>
 					<div class="download-changelog">- Versión inicial</div>
 				</div>
@@ -38,11 +39,12 @@
 					<div class="download-changelog">- Versión inicial</div>
 				</div>
 				<div class="download-container">
-					<div class="download-version">Demo Stella Glow V2</div>
+					<div class="download-version">Demo Stella Glow V1.1</div>
 					<div class="download-buttons">
 						<a href="https://mega.nz/#!680kUTqY!Ahz3g7eNKZ1P4UzXW48VC543CK7PWLwPI0w0juBJJb4"><div class="mega">Mega</div></a>
 						<a href="http://www.mediafire.com/download/bsjg4j3xuzotqev/Stella_Glow_Demo_Espa%C3%B1ol_V1.1_GlowTranslations.rar"><div class="mediafire">Mediafire</div></a>
 						<a href="https://drive.google.com/open?id=0BxU80RyKLHhkTmxCMW1qQURuNVE"><div class="Drive">Drive</div></a>
+						<a href="https://github.com/Glowtranslations/StellaGlowESP/releases/download/1.0/Stella.Glow.Demo.Espanol.V1.1.GlowTranslations.rar"><div class="github">Github</div></a>
 					</div>
 					<div class="download-changelog">-Compatibilidad del parche con Demo EUR y USA actualizada.<br> -Traducción actualizada en base a los últimos cambios y correcciones.<br> -Añadidas las opciones 3DS y CIA.</div>
 				</div>
