Añadido el apartado de compañeros en la web

--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
 				<div style="clear: both;"></div>
 			</div>
 		</div>
+		<div class="module" style="width: 260px; margin-top: 25px; clear: both;">
+			<div class="content-container">
+				<div class="module-title-background" style="background-image: url('images/friends-banner.png');">
+				<div class="content-title">Compañeros</div>
+				</div>
+				<a href="http://transcene.net/"><img style="margin-top: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/transcene.png"></a>
+				<!-- A la espera de que Artema pase el logo
+				<a href="http://hotayeldi-traducciones.blogspot.com.es/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/artema.png"></a>
+				-->
+				<div style="clear: both;"></div>
+			</div>
+		</div>
 		<div style="height:100px; clear: both;"></div>
 		<div class="footer" id="footer"></div>
 		<script src="menus.js" onload="mainMenu(), noSubMenu(), footer()"></script>
