Añadido la versión 1.1 del parche de Stella Glow

--- a/stellaglow/descargas.html
+++ b/stellaglow/descargas.html
@@ -28,6 +28,24 @@
 					</div>
 					<div class="download-changelog">- Versión inicial</div>
 				</div>
+				<div class="download-container">
+					<div class="download-version">Juego completo V1.1</div>
+					<div class="download-buttons">
+						<a href="https://mega.nz/#!8yozwKwT!lqZGGetF1Ywa6YnrMDVD5NZfXm7mxA-Z8ID02wJW3xM"><div class="mega">Mega</div></a>
+						<a href="http://www.mediafire.com/file/9iig6oizwsbeyjc/Stella_Glow_Espa%C3%B1ol_V1.1_GlowTranslations.zip"><div class="mediafire">Mediafire</div></a>
+						<a href="https://drive.google.com/open?id=0BxU80RyKLHhkb05pS0V4eWJBQzA"><div class="Drive">Drive</div></a>
+						<a href="https://github.com/Glowtranslations/StellaGlowESP/releases/tag/1.1"><div class="github">Github</div></a>
+					</div>
+					<div class="download-changelog">
+					- Arreglado numerosos errores sobre faltas ortográficos y de la traducción. <br>
+					- Arreglado el problema de los textos de la primera armonización de Popo en la versión USA. <br>
+					- Arreglado el problema grave de el metodo NTR sobre los crasheos en el final del juego. <br>
+					- Arreglado el problema de los orbes que no salian traducidos al activarse. <br>
+					- Arreglado el problema de saltos de lineas en algunas habilidades pasivas. <br>
+					- Actualizado el soporte de Luma añadiendo la posibilidad de usar su layeredFS para usar la traducción. <br>
+					- Para un changelog más extendido, visita este <a href="https://github.com/Glowtranslations/StellaGlowESP#juego-completo-v11">enlace</a>. <br>
+					- Nota: No se puede parchear encima de la versión 1.0, tienes que hacer una instalación limpia del parche.</div>
+				</div>
 			<div class="download-header">Traducción demo Stella Glow</div>
 				<div class="download-container">
 					<div class="download-version">Demo Stella Glow V1</div>
