Añadido el apartado de errores del parcheador en el apartado de Stella Glow

--- a/stellaglow/informacion.html
+++ b/stellaglow/informacion.html
@@ -28,6 +28,9 @@
 				Hemos creado un repositorio en nuestro github para este tipo de cosas y más.<br>
 				El repositorio de github se encuentra <a href="https://github.com/Glowtranslations/StellaGlowESP">aquí</a>.<br>
 				Sigue las instrucciones del readme que hay para poder reportar el error.
+				<div class="title"><h1>El parcheador no funciona, ¿qué pasa?</h1></div>
+				Hemos añadido un nuevo apartado en el Github de Stella Glow para este tipo de casos, se encuentra <a href="https://github.com/Glowtranslations/StellaGlowESP#faq-de-errores-sobre-el-parcheador">aquí</a>.<br>
+				Si te ocurre un error que no aparece en el F.A.Q. avisanos desde el apartado de <a href="https://github.com/Glowtranslations/StellaGlowESP/issues">"Issues"</a> y te respondemos lo antes posible.
 				<div class="title"><h1>¡A disfrutar!</h1></div>
 				Como se ha mencionado antes, hemos tardado un año y medio en acabar la traducción, asi que no os vamos a entretener más.<br>
 				De parte de todo el equipo de GlowTranslations, deseamos que os lo paséis genial jugando este increíble juego, y daros las gracias por la increíble paciencia que habéis tenido y el apoyo que muchos de vosotros nos habéis brindado.<br>
