--- a/lordofmagna/miembros.html
+++ b/lordofmagna/miembros.html
@@ -83,7 +83,7 @@
 					</div>
 				</div>
 				<div style="clear: both;"></div>
-				<div class="title"><h1>Diseñadores gráficos</h1></div>
+				<div class="title"><h1>Editores gráficos</h1></div>
 				<div class="credits-container"> 
 					<div class="credits-name">Darkmet98</div>
 					<div class="credits-avatar">
