--- a/miembros.html
+++ b/miembros.html
@@ -24,7 +24,7 @@
 				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Darkmet.jpg')"></div>
 					<div class="member-name "style="background-color: #4f7cfe;">Darkmet</div>
-					<div class="member-desc">Traductor<br>Corrector<br>Betatester<br>Diseñador gráfico<br>WebMaster</div>
+					<div class="member-desc">Traductor<br>Corrector<br>Betatester<br>Editor gráfico<br>WebMaster</div>
 				</div>
 				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Alexiiius.jpg')"></div>
@@ -40,11 +40,6 @@
 					<div class="member-avatar" style="background-image: url('images/avatars/Sorium.jpeg')"></div>
 					<div class="member-name" style="background-color: #4f7cfe;">Sorium</div>
 					<div class="member-desc">Traductor<br>Betatester</div>
-				</div>
-				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
-					<div class="member-avatar" style="background-image: url('images/avatars/Ember.jpg')"></div>
-					<div class="member-name" style="background-color: #4f7cfe;">Emberlith</div>
-					<div class="member-desc">Correctora<br>Betatester<br>Diseñadora Gráfica</div>
 				</div>
 				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Lilia.~.jpg')"></div>
