--- a/runefactory4/miembros.html
+++ b/runefactory4/miembros.html
@@ -100,24 +100,12 @@
 						<img onload="this.style.opacity='1';" src="../images/avatars/Elaine.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
-					<div class="credits-name">Emberlith</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../images/avatars/Ember.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
 				<div style="clear: both;"></div>
-				<div class="title"><h1>Diseñadores gráficos</h1></div>
+				<div class="title"><h1>Editores gráficos</h1></div>
 				<div class="credits-container"> 
 					<div class="credits-name">Darkmet98</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container"> 
-					<div class="credits-name">Emberlith</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../images/avatars/Ember.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div style="clear: both;"></div>
