--- a/contactar.html
+++ b/contactar.html
@@ -17,7 +17,7 @@
 			<div class="content">
 				Si buscas información, necesitas ayuda, has encontrado algún error o tienes algo que tengas ganas de compartir con nosotros, aquí tienes la información de como contactar con nosotros.<br><br>
 				Si has encontrado un error, te agradeceriamos que al reportarlo seas lo más explicito posible, mandando capturas de pantalla, como ha pasado y donde ha pasado si fuera posible, con estos datos podremos detectar el error y arreglarlo lo antes posible.<br><br>
-				Si quieres entrar a nuestro grupo y ayudarnos con nuestras traducciones, envianos un email explicando por que quieres entrar, tu nivel de ingles u otros idiomas y que te gustaria hacer. (Traducir, corregir, probar...)<br>
+				Si quieres entrar a nuestro grupo y ayudarnos con nuestras traducciones, envianos un email explicando por que quieres entrar, tu nivel de ingles u otros idiomas, la prueba que hemos dejado en el apartado de <a href="runefactory4/participa.html">Participa</a> en Rune Factory 4 y que te gustaria hacer. (Traducir, corregir, probar...)<br>
 				Escribe de la forma más correcta posible, sin faltas y con acentos; Una buena ortografía nos hará interesarnos más en ti.<br><br>
 				Si quieres compartir algo con nosotros, puedes hacerlo en twitter o en el hilo oficial de GlowTranslations en ElOtroLado.net. 
 			</div>
