--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 				Si encuentras un error, revisa la sección de "información" del juego especifico para ayudarnos a arreglar errores y lo arreglaremos lo antes posible.
 				<div class="title"><h1>¡A disfrutar!</h1></div>
 				Si estás aquí es porque te interesa algún juego que hemos traducido o porque nos quieres hacer una reclamación de derechos de autor, en cualquier caso, en la sección de traducciones tienes todos nuestros proyectos con links de descarga de los parches para traducir el juego. <br>
+				<img onload="this.style.opacity='1';" src="images/girls.png" ></img>
 				<p style="text-align: center; font-size: 24px; font-weight: bold; text-decoration: underline;">¡Disfrutad de nuestras traducciones!</p>
 			</div>
 		</div>
@@ -73,7 +74,7 @@
 				<div style="clear: both;"></div>
 			</div>
 		</div>
-		<div class="module" style="width: 260px; margin-top: 25px; clear: both;">
+		<div class="module" style="width: 260px; margin-top: 25px;">
 			<div class="content-container">
 				<div class="module-title-background" style="background-image: url('images/friends-banner.png');">
 				<div class="content-title">Compañeros</div>
