--- a/lordofmagna/progresos.html
+++ b/lordofmagna/progresos.html
@@ -29,10 +29,10 @@
 				<tr><td>Historia</td><td class='wip'>5%</td><td class='no'>No</td><td class='no'>No</td></tr>
 				<tr><td>Conversaciones</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Relaciones</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Objetos</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Localizaciones</td><td class='wip'>1%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Habilidades y magias</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Interfaz</td><td class='wip'>5%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Objetos</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Localizaciones</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Habilidades y magias</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Interfaz</td><td class='wip'>35%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				</tr>
 				</table>
    </div>
