--- a/runefactory4/progresos.html
+++ b/runefactory4/progresos.html
@@ -31,11 +31,11 @@
 				<tr><td>Historia: Arco 3</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Conversaciones</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Eventos</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Equipo</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Objetos</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Localizaciones</td><td class='wip'>5%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Habilidades y magias Runa</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Interfaz</td><td class='wip'>40%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Equipo</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Objetos</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Localizaciones</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Habilidades y magias Runa</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Interfaz</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				</tr>
 				</table>
    </div>
