--- a/stellaglow/creditos.html
+++ b/stellaglow/creditos.html
@@ -1,4 +1,12 @@
 ﻿<head>
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-76928300-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments)};
+	gtag('js', new Date());
+	gtag('config', 'UA-76928300-1');
+	</script>
 	<title>GlowTranslations - Stella Glow - Créditos</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="icon" href="../favicon.ico" />
